--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
         "php": "^7.0",
         "symfony/monolog-bundle": "^3.0",
         "easycorp/easy-log-handler": "dev-master",
-        "symfony/web-profiler-bundle": "3.3.x-dev",
-        "symfony/phpunit-bridge": "3.3.x-dev",
-        "symfony/var-dumper": "3.3.x-dev"
+        "symfony/web-profiler-bundle": "^3.3",
+        "symfony/phpunit-bridge": "^3.3",
+        "symfony/var-dumper": "^3.3"
     }
 }
