--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "symfony/monolog-bundle": "^3.0",
         "easycorp/easy-log-handler": "dev-master",
         "symfony/web-profiler-bundle": "^3.3",
+        "symfony/twig-bundle": "^3.3",
         "symfony/phpunit-bridge": "^3.3",
         "symfony/var-dumper": "^3.3"
     }
