--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "symfony/monolog-bundle": "^3.0",
         "easycorp/easy-log-handler": "^1.0.2",
         "symfony/profiler-pack": "^1.0",
-        "symfony/phpunit-bridge": "^3.3",
-        "symfony/var-dumper": "^3.3"
+        "symfony/phpunit-bridge": "^3.3|^4.0",
+        "symfony/var-dumper": "^3.3|^4.0"
     }
 }
