Add debug-bundle to the debug-pack

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "description": "A debug pack for Symfony projects",
     "require": {
         "php": "^7.0",
+        "symfony/debug-bundle": "^3.3|^4.0",
         "symfony/monolog-bundle": "^3.0",
         "easycorp/easy-log-handler": "^1.0.2",
         "symfony/profiler-pack": "^1.0",
