changed Composer type to symfony-pack

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "symfony/debug-pack",
-    "type": "metapackage",
+    "type": "symfony-pack",
     "license": "MIT",
     "description": "A debug pack for Symfony projects",
     "require": {
